--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
     "axios": "^1.4.0",
     "expo": "~49.0.7",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-safe-area-context": "^4.7.1",
+    "react-native-screens": "^3.24.0",
     "react-native-svg": "^13.11.0"
   },
   "devDependencies": {
